# BelledsQ_EVB

./: .config  .config.old  Makefile  README.md  build.sh  feeds.conf.default
dl/: alsa-utils-1.0.24.2.tar.bz2  ath10k-firmware-d86e78e5c6be34329936c8bd73a212700437be2e.tar.bz2  b43-tools-017.tar.bz2  cmus-v2.4.0.tar.bz2  gst-plugins-bad-0.10.19.tar.bz2  gst-plugins-base-0.10.29.tar.bz2  gst-plugins-good-0.10.23.tar.bz2  gst-plugins-ugly-0.10.15.tar.bz2  gstreamer-0.10.34.tar.bz2  hostapd-20131120.tar.bz2  libtheora-1.0.tar.bz2  mjpg-streamer-r148.tar.bz2  pianobar-2012.01.10.tar.bz2  pulseaudio-2.1.tar.xz
feeds/: qs.index
feeds/alljoyn.tmp/: .packageinfo  location
feeds/alljoyn.tmp/info/: .files-packageinfo-20281  .files-packageinfo.mk  .packageinfo-alljoyn  .packageinfo-alljoyn-config  .packageinfo-alljoyn-controlpanel  .packageinfo-alljoyn-notification  .packageinfo-alljoyn-onboarding  .packageinfo-alljoyn-sample_apps  .packageinfo-alljoyn-services_common
feeds/luci.tmp/: .packageinfo
feeds/luci.tmp/info/: .files-packageinfo-25372  .files-packageinfo.mk
feeds/luci/luci/: Makefile
feeds/packages.tmp/: .packageinfo
feeds/packages.tmp/info/: .files-packageinfo-25372  (+2 more)
feeds/qs.tmp/: .packageinfo  location
feeds/routing.tmp/: .packageinfo
feeds/xwrt.tmp/: .packageinfo
package/airplay-perl/: Makefile  readme.txt
package/ar7240_i2s/: Makefile
package/base-files/: Makefile
package/bellrender/: Makefile
package/mplayer/: Makefile
package/rfgateway/: Makefile
package/shairport-master/: Makefile  hairtunes.c
scripts/config/: conf  mconf
utils/bellmc/: Makefile  bellmc.c  startmc
utils/bellmc2/: bellmc.c
utils/fts/: fts
utils/mpg123/: mpg123
utils/mplayer/: mplayer
utils/rcmc/: rcmc
utils/upnp/gmediarender-0.0.6/: Makefile  Makefile.in  README  config.status  configure.in
utils/upnp/gmediarender-0.0.6/data/: Makefile.in
utils/upnp/gmediarender-0.0.6/m4/: ac_lib_upnp.m4
utils/upnp/gmediarender-0.0.6/src/: Makefile.am  Makefile.orig  gmediarender  output_gstreamer.c  upnp.c  upnp_connmgr.c  upnp_connmgr.h  upnp_device.c  upnp_renderer.c  upnp_transport.c  webserver.c
utils/webpage/: Makefile
(+310 files in other folders)
